--- a/Swordcraft/todo.txt
+++ b/Swordcraft/todo.txt
@@ -1,8 +1,4 @@
 
 animation or tint change when stunned
 restrict player leaving area
-
-multiple scenes
-    menu
-    single player
-    coop
+biters only kill when lunging
